--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Recruitment Portal Login</title>
+	<title>Digiboxx Recruitment Portal</title>
 </head>
 <body>
 	<h1>Recruitment Portal Login</h1>
@@ -31,13 +31,10 @@
 	</form>
 
 	<!-- Registration Form -->
-	<h2>New User? Register Here</h2>
+	<h2>Create your Account</h2>
 	<form>
 		<label for="full_name">Full Name:</label>
 		<input type="text" id="full_name" name="full_name"><br><br>
-
-		<label for="email">Email:</label>
-		<input type="email" id="email" name="email"><br><br>
 
 		<label for="username">Username:</label>
 		<input type="text" id="username" name="username"><br><br>
